# ohtuvarasto25

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  run_robot_tests.sh
.github/workflows/: main.yml
robot-results/: log.html  output.xml  report.html
src/: app.py  index.py  ui.py  varasto.py
src/static/: style.css
src/static/css/: style.css
src/templates/: base.html  create.html  index.html  manage.html  new.html
src/tests/: app_test.py  varasto_test.py
src/tests/robot/: README.md  varasto_web.robot
